compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_constructors2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1087
expression: "type Boxy { Box(Int) }\ntype Box { Box(x: Int) }"

---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:13
  │
1 │ type Boxy { Box(Int) }
  │             ^^^^^^^^ First defined here
2 │ type Box { Box(x: Int) }
  │            ^^^^^^^^^^^ Redefined here

`Box` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

